@@ -3,22 +3,15 @@ package com.github.sakakiaruka.customcrafter.customcrafter.util;
 import com.github.sakakiaruka.customcrafter.customcrafter.object.Matter.Matter;
 import com.github.sakakiaruka.customcrafter.customcrafter.object.Matter.Potions.Potions;
 import com.github.sakakiaruka.customcrafter.customcrafter.object.Recipe.*;
+import net.kyori.adventure.text.Component;
 import org.bukkit.Bukkit;
 import org.bukkit.Color;
 import org.bukkit.Material;
-import org.bukkit.NamespacedKey;
-import org.bukkit.attribute.Attribute;
-import org.bukkit.attribute.AttributeModifier;
-import org.bukkit.enchantments.Enchantment;
-import org.bukkit.entity.Damageable;
 import org.bukkit.entity.Item;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.Inventory;
-import org.bukkit.inventory.ItemFlag;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.BookMeta;
-import org.bukkit.inventory.meta.ItemMeta;
-import org.bukkit.inventory.meta.LeatherArmorMeta;
 
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -30,19 +23,11 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Random;
 import java.util.Set;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 
 import static com.github.sakakiaruka.customcrafter.customcrafter.SettingsLoad.*;
 
 public class InventoryUtil {
-
-    private static final String LEATHER_ARMOR_COLOR_RGB_PATTERN = "^type:(?i)(RGB)/value:R->(\\d{1,3}),G->(\\d{1,3}),B->(\\d{1,3})$";
-    private static final String LEATHER_ARMOR_COLOR_NAME_PATTERN = "^type:(?i)(NAME)/value:([\\w_]+)$";
-    private static final String LEATHER_ARMOR_COLOR_RANDOM_PATTERN = "^type:(?i)(RANDOM)$";
-
     public static List<Integer> getTableSlots(int size) {
         List<Integer> list = new ArrayList<>();
         for (int i = 0; i < size; i++) {
@@ -61,8 +46,8 @@ public class InventoryUtil {
             list.add(i);
         }
         list.removeAll(getTableSlots(size));
-        list.removeAll(Arrays.asList(CRAFTING_TABLE_MAKE_BUTTON));
-        list.removeAll(Arrays.asList(CRAFTING_TABLE_RESULT_SLOT));
+        list.removeAll(List.of(CRAFTING_TABLE_MAKE_BUTTON));
+        list.removeAll(List.of(CRAFTING_TABLE_RESULT_SLOT));
         return list;
     }
 
@@ -71,7 +56,7 @@ public class InventoryUtil {
         // amount -> decrement amount
         List<Integer> slots = getTableSlots(CRAFTING_TABLE_SIZE);
         for (int i : slots) {
-            if (inventory.getItem(i) == null) continue;
+            if (inventory.getItem(i) == null || inventory.getItem(i).getType().equals(Material.AIR)) continue;
             int oldAmount = inventory.getItem(i).getAmount();
             int newAmount = Math.max(oldAmount - amount, 0);
             inventory.getItem(i).setAmount(newAmount);
@@ -114,77 +99,6 @@ public class InventoryUtil {
     }
 
 
-
-    public static List<ItemStack> getItemStackFromCraftingMenu(Inventory inventory) {
-        List<ItemStack> result = new ArrayList<>();
-        for (int i : getTableSlots(CRAFTING_TABLE_SIZE)) {
-            if (inventory.getItem(i) == null || inventory.getItem(i).getType().equals(Material.AIR)) continue;
-            result.add(inventory.getItem(i));
-        }
-        return result;
-    }
-
-    // === book field set ===
-    public static void setAuthor(BookMeta meta, String value) {
-        meta.setAuthor(value);
-    }
-
-    public static void setTitle(BookMeta meta, String value) {
-        meta.setTitle(value);
-    }
-
-    public void setPage(BookMeta meta, int page, String value) {
-        // page specified
-        if (page < 0 || 100 < page) {
-            Bukkit.getLogger().warning("[CustomCrafter] Set result metadata (setPage) failed. (Illegal insert page.)");
-            return;
-        }
-        if (!isValidPage(meta, "setPage")) return;
-        meta.setPage(page, value);
-    }
-
-    public static void setPages(BookMeta meta, String value) {
-        // set page un-specified page
-        meta.setPages(value);
-    }
-
-    public static void setGeneration(BookMeta meta, String value) {
-        // set book-generation
-        BookMeta.Generation generation;
-        try {
-            generation = BookMeta.Generation.valueOf(value.toUpperCase());
-        } catch (Exception e) {
-            Bukkit.getLogger().warning("[CustomCrafter] Set result metadata (setGeneration) failed. (Illegal BOOK_GENERATION)");
-            return;
-        }
-        meta.setGeneration(generation);
-    }
-
-    public static void addPage(BookMeta meta, String value) {
-        // add page
-        String section = "addPage";
-        if (!isValidPage(meta, section)) return;
-        if (!isValidCharacters(value, section)) return;
-        if (!isValidCharacters(meta, value, section)) return;
-        meta.addPage(value);
-    }
-
-    private static boolean isValidPage(BookMeta meta, String section) {
-        if (100 <= meta.getPageCount()) {
-            Bukkit.getLogger().warning("[CustomCrafter] Set result metadata (" + section + ") failed. (Over 50 pages.)");
-            return false;
-        }
-        return true;
-    }
-
-    private static boolean isValidCharacters(String value, String section) {
-        if (320 < value.length()) {
-            Bukkit.getLogger().warning("[CustomCrafter] Set result metadata (" + section + ") failed. (Over 256 characters.)");
-            return false;
-        }
-        return true;
-    }
-
     private static boolean isValidCharacters(BookMeta meta, String value, String section) {
         if (25600 < (meta.getPageCount() * 320) + value.length()) {
             Bukkit.getLogger().warning("[CustomCrafter] Set result metadata (" + section + ") failed. (Over 25600 characters.)");
@@ -215,7 +129,7 @@ public class InventoryUtil {
 
         if (ONE_BOOK_CHAR_LIMIT < value.length()) {
             Bukkit.getLogger().warning("[CustomCrafter] Set result metadata (addLong) failed. (Over 25600 characters.)");
-            meta.addPage("Overflown");
+            meta.addPages(Component.text("Overflown"));
             return;
         }
 
@@ -239,7 +153,7 @@ public class InventoryUtil {
                     return;
                 }
 
-                meta.addPage(element.toString());
+                meta.addPages(Component.text(element.toString()));
                 element.setLength(0);
 
                 horizontal = evaluation;
@@ -261,94 +175,41 @@ public class InventoryUtil {
             }
         }
 
-        meta.addPage(element.toString()); // add remaining string
+        meta.addPages(Component.text(element.toString())); // add remaining string
     }
 
 
     // leather_armor_color modify
-    private static Color getColor(String value) {
+    public static Color getColor(String value) {
         // if the value is not a color-name, returns null.
         Color color;
         value = value.toUpperCase();
-        if (value.equals("AQUA")) color = Color.AQUA;
-        else if (value.equals("BLACK")) color = Color.BLACK;
-        else if (value.equals("BLUE")) color = Color.BLUE;
-        else if (value.equals("FUCHSIA")) color = Color.FUCHSIA;
-        else if (value.equals("GRAY")) color = Color.GRAY;
-        else if (value.equals("GREEN")) color = Color.GREEN;
-        else if (value.equals("LIME")) color = Color.LIME;
-        else if (value.equals("MAROON")) color = Color.MAROON;
-        else if (value.equals("NAVY")) color = Color.NAVY;
-        else if (value.equals("OLIVE")) color = Color.OLIVE;
-        else if (value.equals("ORANGE")) color = Color.ORANGE;
-        else if (value.equals("PURPLE")) color = Color.PURPLE;
-        else if (value.equals("RED")) color = Color.RED;
-        else if (value.equals("SILVER")) color = Color.SILVER;
-        else if (value.equals("TEAL")) color = Color.TEAL;
-        else if (value.equals("WHITE")) color = Color.WHITE;
-        else if (value.equals("YELLOW")) color = Color.YELLOW;
-        else {
-            Bukkit.getLogger().warning("[CustomCrafter] (ColorName) failed. Input -> " + value);
-            return null;
+        switch (value) {
+            case "AQUA" -> color = Color.AQUA;
+            case "BLACK" -> color = Color.BLACK;
+            case "BLUE" -> color = Color.BLUE;
+            case "FUCHSIA" -> color = Color.FUCHSIA;
+            case "GRAY" -> color = Color.GRAY;
+            case "GREEN" -> color = Color.GREEN;
+            case "LIME" -> color = Color.LIME;
+            case "MAROON" -> color = Color.MAROON;
+            case "NAVY" -> color = Color.NAVY;
+            case "OLIVE" -> color = Color.OLIVE;
+            case "ORANGE" -> color = Color.ORANGE;
+            case "PURPLE" -> color = Color.PURPLE;
+            case "RED" -> color = Color.RED;
+            case "SILVER" -> color = Color.SILVER;
+            case "TEAL" -> color = Color.TEAL;
+            case "WHITE" -> color = Color.WHITE;
+            case "YELLOW" -> color = Color.YELLOW;
+            default -> {
+                Bukkit.getLogger().warning("[CustomCrafter] (ColorName) failed. Input -> " + value);
+                return null;
+            }
         }
         return color;
     }
 
-    private static String getLeatherArmorColorWarningUnMatchPattern() {
-        String result =
-                "[CustomCrafter] Set result metadata (LeatherArmorColor) failed. (Illegal data format.)" + LINE_SEPARATOR
-                        + "Follow the patterns." + LINE_SEPARATOR
-                        + "- " + LEATHER_ARMOR_COLOR_RGB_PATTERN + LINE_SEPARATOR
-                        + "- " + LEATHER_ARMOR_COLOR_NAME_PATTERN + LINE_SEPARATOR
-                        + "- " + LEATHER_ARMOR_COLOR_RANDOM_PATTERN + LINE_SEPARATOR;
-        return result;
-    }
-
-    public static void setLeatherArmorColorFromRGB(LeatherArmorMeta meta, String value) {
-        Matcher matcher = Pattern.compile(LEATHER_ARMOR_COLOR_RGB_PATTERN).matcher(value);
-        if (!matcher.matches()) {
-            Bukkit.getLogger().warning(getLeatherArmorColorWarningUnMatchPattern());
-            return;
-        }
-
-        int RED = Integer.parseInt(matcher.group(2));
-        int GREEN = Integer.parseInt(matcher.group(3));
-        int BLUE = Integer.parseInt(matcher.group(4));
-        Color color;
-        try {
-            color = Color.fromRGB(RED, GREEN, BLUE);
-        } catch (Exception e) {
-            Bukkit.getLogger().warning("[CustomCrafter] Set result metadata (LeatherArmorColor) failed. (Illegal RGB elements.)");
-            e.printStackTrace();
-            return;
-        }
-        meta.setColor(color);
-    }
-
-    public static void setLeatherArmorColorFromName(LeatherArmorMeta meta, String value) {
-        Matcher matcher = Pattern.compile(LEATHER_ARMOR_COLOR_NAME_PATTERN).matcher(value);
-        if (!matcher.matches()) {
-            Bukkit.getLogger().warning(getLeatherArmorColorWarningUnMatchPattern());
-            return;
-        }
-        Color color;
-        if ((color = getColor(matcher.group(2))) == null) {
-            Bukkit.getLogger().warning("[CustomCrafter] Set result metadata (LeatherArmorColor) failed. (Illegal color-name.)" + LINE_SEPARATOR
-                    + "You can use 'AQUA', 'BLACK', 'BLUE', 'FUCHSIA', 'GRAY', 'GREEN', 'LIME', 'MAROON', 'NAVY', 'OLIVE', 'ORANGE', 'PURPLE', 'RED', 'SILVER', 'TEAL', 'WHITE' and 'YELLOW'."
-                    + LINE_SEPARATOR);
-            return;
-        }
-        meta.setColor(color);
-    }
-
-    public static void setLeatherArmorColorRandom(LeatherArmorMeta meta) {
-        Random random = new Random();
-        int RED = random.nextInt(256);
-        int GREEN = random.nextInt(256);
-        int BLUE = random.nextInt(256);
-        Color color = Color.fromRGB(RED, GREEN, BLUE);
-        meta.setColor(color);
-    }
 
     public static void safetyItemDrop(Player player, List<ItemStack> items) {
         for (ItemStack item : items) {
@@ -358,166 +219,6 @@ public class InventoryUtil {
         }
     }
 
-    public static void enchantModify(String action, String value, ItemMeta meta) {
-        if (!meta.hasEnchants()) return;
-        if (action.equals("add")) {
-            Matcher v = Pattern.compile("enchant=([\\w_]+),level=([\\d]+)").matcher(value);
-            if (!v.matches()) return;
-            Enchantment enchant = Enchantment.getByKey(NamespacedKey.minecraft(v.group(1).toLowerCase()));
-            int level = Integer.parseInt(v.group(2));
-            meta.removeEnchant(enchant);
-            meta.addEnchant(enchant, level, false);
-        } else if (action.equals("remove")) {
-
-            //debug
-            Bukkit.getLogger().info("enchant REMOVE=" + value);
-
-            Enchantment enchant = Enchantment.getByKey(NamespacedKey.minecraft(value.toLowerCase()));
-            meta.removeEnchant(enchant);
-        }
-    }
-
-    public static void enchantLevel(String action, String value, ItemMeta meta) {
-        // if the specified enchantment is not contained the item-stack, this method does nothing.
-        if (!meta.hasEnchants()) return;
-        Matcher v = Pattern.compile("enchant=([\\w_]+),change=(\\d+)").matcher(value);
-        if (!v.matches()) return;
-        Enchantment enchant = Enchantment.getByKey(NamespacedKey.minecraft(v.group(1).toLowerCase()));
-        int change = Integer.parseInt(v.group(2));
-
-        int oldLevel = meta.getEnchantLevel(enchant);
-        meta.removeEnchant(enchant);
-        int newLevel = 1;
-        if (action.equals("minus")) newLevel = Math.max(1, oldLevel - change);
-        else if (action.equals("plus")) newLevel = Math.min(255, oldLevel + change);
-        meta.addEnchant(enchant, newLevel, true);
-    }
-
-    public static void loreModify(String action, String value, ItemMeta meta) {
-        switch (action) {
-            case "add": {
-                List<String> lore = meta.getLore();
-                meta.setLore(null); // clear the lore
-
-                lore.add(value);
-                meta.setLore(lore);
-                break;
-            }
-            case "clear":
-                meta.setLore(null);
-                break;
-            case "modify": {
-                List<String> lore = meta.getLore();
-                meta.setLore(null); // clear the lore
-                Matcher v = Pattern.compile("line=([\\d]+),lore=(.+)").matcher(value);
-                if (!v.matches()) return;
-                int line = Integer.parseInt(v.group(1));
-                String add = v.group(2);
-
-                if (lore.size() < line) return;
-                lore.add(line, add);
-                meta.setLore(lore);
-                break;
-            }
-        }
-    }
-
-    public static void durabilityModify(String action, String value, ItemMeta meta) {
-        Damageable damageable;
-        try {
-            damageable = (Damageable) meta;
-        } catch (Exception e) {
-            return;
-        }
-
-        double oldHealth = damageable.getHealth();
-        List<AttributeModifier> modifiers = (List<AttributeModifier>) meta.getAttributeModifiers(Attribute.GENERIC_MAX_HEALTH);
-        double maxHealth = modifiers.get(0).getAmount();
-        double lastOne = maxHealth - 1;
-        double change = Double.parseDouble(value);
-
-        if (action.equalsIgnoreCase("minus")) {
-            // minus
-            double damage = Math.min(lastOne, change);
-            damageable.damage(damage);
-        } else if (action.equalsIgnoreCase("plus")) {
-            // plus
-            double newHealth = Math.min(maxHealth, oldHealth + change);
-            damageable.setHealth(newHealth);
-        }
-    }
-
-
-    public static void armorColor(String action, String value, ItemMeta meta) {
-        LeatherArmorMeta leatherMeta;
-        try {
-            leatherMeta = (LeatherArmorMeta) meta;
-        } catch (Exception e) {
-            Bukkit.getLogger().warning("[CustomCrafter] Failed to convert metadata to LeatherArmorMeta. (Not LeatherArmor)");
-            return;
-        }
-
-        if (action.equalsIgnoreCase("name")) {
-            String query = "type:name/value:" + value;
-            setLeatherArmorColorFromName(leatherMeta, query);
-        } else if (action.equalsIgnoreCase("rgb")) {
-            String query = "type:rgb/value:" + value.replace("=", "->");
-            setLeatherArmorColorFromRGB(leatherMeta, query);
-        } else if (action.equalsIgnoreCase("random")) {
-            Bukkit.getLogger().info("[CustomCrafter] The specified value (=" + value + ") is not used.");
-            setLeatherArmorColorRandom(leatherMeta);
-        }
-    }
-
-    public static void textureIdModify(String action, String value, ItemMeta meta) {
-        if (action.equals("clear")) {
-            meta.setCustomModelData(null);
-        } else if (action.equals("modify")) {
-            try {
-                meta.setCustomModelData(Integer.parseInt(value));
-            } catch (Exception e) {
-                e.printStackTrace();
-            }
-        }
-    }
-
-    public static void displayNameModify(String action, String value, ItemMeta meta) {
-        if (action.equals("clear")) {
-            meta.setDisplayName(null);
-        } else if (action.equals("modify")) {
-            if (value.isEmpty()) meta.setDisplayName(null); // clear
-            meta.setDisplayName(value);
-        }
-    }
-
-    public static void itemFlagModify(String action, String value, ItemMeta meta) {
-        if (action.equals("clear")) {
-            if (meta.getItemFlags().isEmpty()) return;
-            meta.getItemFlags().forEach(flag-> meta.removeItemFlags(flag));
-        } else if (action.equals("add")) {
-            ItemFlag flag;
-            try {
-                flag = ItemFlag.valueOf(value.toUpperCase());
-            } catch (Exception e) {
-                Bukkit.getLogger().warning("[CustomCrafter] Failed to add item-flag in Pass-through. (Invalid ItemFlag)");
-                e.printStackTrace();
-                return;
-            }
-
-            meta.addItemFlags(flag);
-        } else if (action.equals("remove")) {
-            ItemFlag target;
-            try {
-                target = ItemFlag.valueOf(value.toUpperCase());
-            } catch (Exception e) {
-                Bukkit.getLogger().warning("[CustomCrafter] Failed to remove item-flag in Pass-through. (Invalid ItemFlag)");
-                e.printStackTrace();
-                return;
-            }
-
-            meta.removeItemFlags(target);
-        }
-    }
 
     public static Map<Coordinate, List<Coordinate>> amorphous(Recipe recipe, Recipe input) {
         Map<Coordinate, List<Coordinate>> map = new HashMap<>();
@@ -541,7 +242,7 @@ public class InventoryUtil {
             Matter current = recipe.getMatterFromCoordinate(coordinate);
             element.put("potion", current instanceof Potions);
             element.put("enchant", current.hasWrap());
-            element.put("container", current.hasContainer());
+            element.put("container", current.hasContainers());
             map.put(coordinate, element);
         }
         return map;
@@ -564,7 +265,7 @@ public class InventoryUtil {
             }
         }
 
-        Bukkit.getLogger().info("merged map="+merged);
+//        Bukkit.getLogger().info("merged map="+merged);
 
         Map<Coordinate, List<Coordinate>> conflict = new HashMap<>();
         Map<Coordinate, Coordinate> finished = new HashMap<>();
@@ -575,18 +276,18 @@ public class InventoryUtil {
                     continue;
                 }
                 // finished has already contained this value
-                Bukkit.getLogger().info("combination error (value duplication)");
+//                Bukkit.getLogger().info("combination error (value duplication)");
                 return new HashMap<>();
             }
 
             conflict.put(entry.getKey(), entry.getValue());
         }
 
-        Bukkit.getLogger().info("finished="+finished);
-        Bukkit.getLogger().info("conflict="+conflict);
+//        Bukkit.getLogger().info("finished="+finished);
+//        Bukkit.getLogger().info("conflict="+conflict);
 
         if (hasDuplicate(finished)) {
-            Bukkit.getLogger().info("contains duplicate coordinate.");
+//            Bukkit.getLogger().info("contains duplicate coordinate.");
             return new HashMap<>();
         }
 
@@ -619,7 +320,7 @@ public class InventoryUtil {
             non_duplicate.add(Arrays.toString(ss));
         }
 
-        Bukkit.getLogger().info("non_duplicate="+non_duplicate);
+//        Bukkit.getLogger().info("non_duplicate="+non_duplicate);
 
         List<String> non_duplcicate_list = new ArrayList<>(non_duplicate);
         for (int i = 0; i < non_duplcicate_list.size(); i++) {
@@ -628,8 +329,8 @@ public class InventoryUtil {
             for (Map.Entry<Coordinate, List<Coordinate>> entry : conflict.entrySet()) {
                 Coordinate key = entry.getKey();
 
-                // debug ^ 2
-                Bukkit.getLogger().info("conflict loop (i="+i+", temp[index])="+temp[index]);
+                // debug
+//                Bukkit.getLogger().info("conflict loop (i="+i+", temp[index])="+temp[index]);
 
                 String indexParse = temp[index]
                         .replace("[", "")
@@ -648,15 +349,15 @@ public class InventoryUtil {
             }
 
             if (hasDuplicate(finished)) {
-                Bukkit.getLogger().info("contains duplicate coordinate (in loop)");
+//                Bukkit.getLogger().info("contains duplicate coordinate (in loop)");
                 continue;
             }
 
-            Bukkit.getLogger().info("finished (index="+index+")="+finished);
+//            Bukkit.getLogger().info("finished (index="+index+")="+finished);
             return finished;
         }
 
-        Bukkit.getLogger().info("recipe match failed.");
+//        Bukkit.getLogger().info("recipe match failed.");
         return new HashMap<>();
     }
 
